@@ -18,6 +18,7 @@
 package org.apache.cassandra.index.sai.iterators;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.function.BiFunction;
 
 import org.apache.cassandra.index.sai.utils.SAIRandomizedTester;
@@ -43,12 +44,13 @@ public class AbstractKeyRangeIteratorTester extends SAIRandomizedTester
 
     final KeyRangeIterator buildIntersection(KeyRangeIterator... ranges)
     {
-        return KeyRangeIntersectionIterator.builder(16, Integer.MAX_VALUE).add(Arrays.asList(ranges)).build();
+        return KeyRangeIntersectionIterator.build(List.of(ranges));
     }
 
+    // FIXME
     final KeyRangeIterator buildSelectiveIntersection(int limit, KeyRangeIterator... ranges)
     {
-        return KeyRangeIntersectionIterator.builder(16, limit).add(Arrays.asList(ranges)).build();
+        return KeyRangeIntersectionIterator.build(List.of(ranges));
     }
 
     final KeyRangeIterator buildIntersection(long[]... ranges)
